# NFe-TCE-GO

./: .gitignore  README.md  setup.cfg
.github/workflows/: publish-testpypi.yml
scripts/: 01GTIN_CLEANING.ipynb  02NCM_CORRECTION.ipynb  03NCM_CLEANING.ipynb  04NCM_OCSVM.ipynb  05COMBINE_TOKENS.ipynb  Classificar_Codigos_EAN.py  Combinar_Tokens_Corpus.py  Normalizar_EAN.ipynb
src/nfetcego/: __main__.py  cfgparse.py  cli.py  dremio.py  io.py
src/nfetcego/workflows/: extraction.py
