[metadata]
name = nfetcego
version = 0.0.3
author = Kinteshi
author_email = kinteshi@outlook.com
description = NFe TCE-GO
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Kinteshi/NFe-TCE-GO
project_urls =
    Bug Tracker = https://github.com/Kinteshi/NFe-TCE-GO/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    pandas
    jaydebeapi

[options.packages.find]
where = src

[options.package_data]
* = *.jar

[options.entry_points]
console_scripts =
    nfeutils = nfetcego.cli:main